--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,10 @@ dependencies {
     compile 'com.afollestad:sectioned-recyclerview:0.5.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+
+
     testCompile 'junit:junit:4.12'
 }
