--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
 
+    //loading
+    compile 'com.victor:lib:1.0.4'
+
 
     testCompile 'junit:junit:4.12'
 }
